Added WDH class and Winium Common elements Amended the TestHelper to add SleepInSeconds function Fixed the SDH wait conditions

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,12 @@
 *.log
 *.sql
 *.sqlite
+storage.ide
+storage.ide-shm
+stoarge.ide-wal
+*.nupkg
+*.force
+*.cache
 
 # OS generated files #
 ######################
