--- a/training.automation.common/training.automation.common.csproj
+++ b/training.automation.common/training.automation.common.csproj
@@ -103,7 +103,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\TestHelper.cs" />
     <Compile Include="Utilities\WiniumDriverHelper.cs" />
+    <Compile Include="Winium\Elements\Button.cs" />
     <Compile Include="Winium\Elements\Common\Element.cs" />
+    <Compile Include="Winium\Elements\Container.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
