--- a/training.automation.common/.gitignore
+++ b/training.automation.common/.gitignore
@@ -8,6 +8,14 @@
 *.exe
 *.o
 *.so
+*.lock
+*.html
+*.pdb
+*.xml
+*.CopyComplete
+*.tmp
+bin
+obj
 
 # Packages #
 ############
@@ -27,6 +35,12 @@
 *.log
 *.sql
 *.sqlite
+storage.ide
+storage.ide-shm
+stoarge.ide-wal
+*.nupkg
+*.force
+*.cache
 
 # OS generated files #
 ######################
@@ -37,4 +51,8 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-*.json
+*.vs
+.vs
+/training.automation.appium/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/training.automation.appium/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/training.automation.appium/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
