--- a/training.automation.selenium/.gitignore
+++ b/training.automation.selenium/.gitignore
@@ -8,14 +8,6 @@
 *.exe
 *.o
 *.so
-*.lock
-*.html
-*.pdb
-*.xml
-*.CopyComplete
-*.tmp
-bin
-obj
 
 # Packages #
 ############
@@ -35,12 +27,6 @@ obj
 *.log
 *.sql
 *.sqlite
-storage.ide
-storage.ide-shm
-stoarge.ide-wal
-*.nupkg
-*.force
-*.cache
 
 # OS generated files #
 ######################
@@ -51,8 +37,4 @@ stoarge.ide-wal
 .Trashes
 ehthumbs.db
 Thumbs.db
-*.vs
-.vs
-/training.automation.appium/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-/training.automation.appium/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-/training.automation.appium/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+*.json
