--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,15 @@ ehthumbs.db
 Thumbs.db
 *.vs
 .vs
-/training.automation.appium/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-/training.automation.appium/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-/training.automation.appium/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/training.automation.selenium/obj/Debug/
+/training.automation.selenium.specflow/obj/Debug/
+/training.automation.appium/obj/Debug/
+/MigrationBackup/b8cc55c2/training.automation.appium
+*.tmp
+/training.automation.winium/obj/Debug
+/training.automation.winium/bin/Debug
+*.config
+*.txt
+*.xml
+*.pdb
+
