ChromeDriver NuGet package added, no longer needed to be stored locally

--- a/training.automation.selenium/packages.config
+++ b/training.automation.selenium/packages.config
@@ -16,6 +16,7 @@
   <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net461" />
   <package id="Selenium.Support" version="2.48.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.46.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
