--- a/training.automation.api/training.automation.api.csproj
+++ b/training.automation.api/training.automation.api.csproj
@@ -75,8 +75,7 @@
   <ItemGroup>
     <Compile Include="Data\TrelloApiData.cs" />
     <Compile Include="Data\TrelloBoardApiData.cs" />
-    <Compile Include="Data\TrelloBoardData.cs" />
-    <Compile Include="Data\TrelloBoardStarredData.cs" />
+    <Compile Include="Data\TrelloResponseData.cs" />
     <Compile Include="TrelloAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\TrelloHelper.cs" />
