Update so feature.cs files are created on build using MsBuild rather than having to commit them every change

--- a/training.automation.winium/packages.config
+++ b/training.automation.winium/packages.config
@@ -15,6 +15,7 @@
   <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="2.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Winium.WebDriver" version="0.1.1" targetFramework="net461" />
 </packages>
