--- a/training.automation.appium/packages.config
+++ b/training.automation.appium/packages.config
@@ -9,5 +9,6 @@
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="2.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
