--- a/training.automation.selenium.specflow/packages.config
+++ b/training.automation.selenium.specflow/packages.config
@@ -17,6 +17,7 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="73.0.3683.68" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="2.4.0" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
