--- a/training.automation.selenium/packages.config
+++ b/training.automation.selenium/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NHamcrest" version="2.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit.Console" version="3.10.0" targetFramework="net461" />
@@ -14,5 +15,7 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="73.0.3683.68" targetFramework="net461" />
   <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net461" />
+  <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="2.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
