add headless arguement

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Thumbs.db
 /training.automation.common/bin/Debug/training.automation.common.exe.config
 /training.automation.selenium/bin/Debug/training.automation.common.exe.config
 /training.automation.selenium/bin/Debug/training.automation.selenium.dll.config
+/training.automation.appium/training.automation.appium.csproj.user
