Fixed appium, need to start building out the app elements

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Thumbs.db
 /training.automation.selenium/bin/Debug/training.automation.common.exe.config
 /training.automation.selenium/bin/Debug/training.automation.selenium.dll.config
 /training.automation.appium/training.automation.appium.csproj.user
+/training.automation.selenium.specflow/TestRuns/TestRun_04.06.19
