--- a/training.automation.common/packages.config
+++ b/training.automation.common/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net461" />
-  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Appium.WebDriver" version="4.0.0.6-beta" targetFramework="net461" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net461" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
   <package id="Microsoft.CodeCoverage" version="16.1.1" targetFramework="net461" />
   <package id="Microsoft.NET.Test.Sdk" version="16.1.1" targetFramework="net461" />
