Fix XPaths for most of the Trello web stuff - lot of changes

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ Thumbs.db
 /training.automation.selenium/bin/Debug/training.automation.selenium.dll.config
 /training.automation.appium/training.automation.appium.csproj.user
 /training.automation.selenium.specflow/TestRuns/TestRun_04.06.19
+/training.automation.appium/TestRuns/What happens on failure/LogIn/FailureScreenshots
